
syntax = "proto3";
option java_multiple_files=true;
option java_package="com.deepu.grpc";
option java_outer_classname="StockTradingProto";

service StockTradingService{
  // UNARY - RPC -> get current stock price
  rpc getStockPrice(StockRequest) returns (StockResponse);
  // Server Streaming
  rpc subscribeStockPrice(StockRequest) returns(stream StockResponse);
  // Client Streaming
  rpc bulkStockOrder(stream StockOrder) returns(OrderSummary);
  // Bidirectional Streaming
  rpc liveTrading(stream StockOrder) returns(stream TradeStatus);
}

message StockRequest{
  string stock_symbol=1;
}

message StockResponse{
  string stock_symbol=1;
  double price=2;
  string timestamp=3;
}

message StockOrder{
  string order_id=1;
  string stock_symbol=2;
  int32 quantity=3;
  double price=4;
  string order_type=5; // BUY or SELL
}

message OrderSummary{
  int32 totalOrders=1;
  double totalAmount=2;
  int32 successCount=3;
}

message TradeStatus{
  string order_id=1;
  string status=2; // EXECUTE, FAILED or PENDING
  string message=3; // reason if failed or success message
  string timestamp=4;
}